Commit endpoint is working and css is fixed for table and scrollbar is added

--- a/app/frontend/src/style.css
+++ b/app/frontend/src/style.css
@@ -162,13 +162,46 @@ body {
   font-size: 1.1rem;
 }
 
-.api-section, .critical-logs {
+.api-section, .critical-logs, .log-distribution {
   background: rgba(102, 126, 234, 0.05);
   border: 1px solid rgba(102, 126, 234, 0.1);
   padding: 24px;
   border-radius: 16px;
   margin: 24px 0;
-  border-left: 4px solid #667eea;
+  border: 2px solid #667eea;
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.08);
+  max-height: 700px;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
+}
+
+.api-section::-webkit-scrollbar,
+.critical-logs::-webkit-scrollbar,
+.log-distribution::-webkit-scrollbar {
+  width: 10px; 
+  height: 70%; 
+}
+
+.api-section::-webkit-scrollbar-track,
+.critical-logs::-webkit-scrollbar-track,
+.log-distribution::-webkit-scrollbar-track {
+  background: rgba(102, 126, 234, 0.05);
+  border-radius: 8px;
+  margin: 20px 0; 
+}
+
+.api-section::-webkit-scrollbar-thumb,
+.critical-logs::-webkit-scrollbar-thumb,
+.log-distribution::-webkit-scrollbar-thumb {
+  background-color: #667eea;
+  border-radius: 5px;
+  border: 2px solid transparent;
+  background-clip: content-box;
+  min-height: 60px; 
+  margin-left: 2px; 
+  margin-right: 5px;
+  margin-top: 10px; 
+  margin-bottom: 10px; 
 }
 
 /* Logout button */
